# mushaf-konnekt-core

./: .dockerignore  .env.example  .geminiignore  .gitignore  Dockerfile  README.md  context.md  docker-compose.yml  pyproject.toml
src/: main.py
src/repository/: database.py  models.py
src/routers/: auth.py  content.py  user_api.py
src/scripts/: footnotes_database_refresher.py  main_database_refresher.py
src/services/: qf_oauth.py
